# Scaler-vs-META-Hackathon

./: .gitignore  LEARNING.MD
Space/clinical-triage-env/: Dockerfile  README.md  TECHNICAL_PROJECT_REPORT.md  baseline.py  data_bridge.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
Space/clinical-triage-env/server/: app.py
Space/clinical-triage-env/static/: app.js  index.html  styles.css
docs/: project_evaluation.md  project_evolution.md  project_plan.md  summary.md
python-bug-fixer/: .gitignore  baseline.py  openenv.yaml
python-bug-fixer/src/envs/bug_fixer/: environment.py  grader.py  models.py
python-bug-fixer/src/envs/bug_fixer/server/: Dockerfile  server.py
python-bug-fixer/src/envs/bug_fixer/tasks/: easy.py  hard.py  medium.py
